--- a/learn_14/Qt/MyMusic/animbutton.ui
+++ b/learn_14/Qt/MyMusic/animbutton.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>BtForm</class>
- <widget class="QWidget" name="BtForm">
+ <class>AnimButton</class>
+ <widget class="QWidget" name="AnimButton">
   <property name="enabled">
    <bool>true</bool>
   </property>
@@ -50,7 +50,7 @@
       <property name="geometry">
        <rect>
         <x>160</x>
-        <y>5</y>
+        <y>10</y>
         <width>30</width>
         <height>25</height>
        </rect>
@@ -67,108 +67,112 @@
 	background-color: rgb(255, 255, 255);
 }</string>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_3">
-       <property name="spacing">
-        <number>0</number>
+      <widget class="QLabel" name="line2">
+       <property name="geometry">
+        <rect>
+         <x>3</x>
+         <y>0</y>
+         <width>3</width>
+         <height>25</height>
+        </rect>
        </property>
-       <property name="sizeConstraint">
-        <enum>QLayout::SetDefaultConstraint</enum>
+       <property name="minimumSize">
+        <size>
+         <width>3</width>
+         <height>0</height>
+        </size>
        </property>
-       <property name="leftMargin">
-        <number>0</number>
+       <property name="maximumSize">
+        <size>
+         <width>3</width>
+         <height>30</height>
+        </size>
        </property>
-       <property name="topMargin">
-        <number>0</number>
+       <property name="text">
+        <string/>
        </property>
-       <property name="rightMargin">
-        <number>0</number>
+      </widget>
+      <widget class="QLabel" name="line3">
+       <property name="geometry">
+        <rect>
+         <x>9</x>
+         <y>0</y>
+         <width>3</width>
+         <height>25</height>
+        </rect>
        </property>
-       <property name="bottomMargin">
-        <number>0</number>
+       <property name="minimumSize">
+        <size>
+         <width>3</width>
+         <height>0</height>
+        </size>
        </property>
-       <item>
-        <widget class="QLabel" name="line2">
-         <property name="minimumSize">
-          <size>
-           <width>3</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>3</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="line3">
-         <property name="minimumSize">
-          <size>
-           <width>3</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>3</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="line4">
-         <property name="minimumSize">
-          <size>
-           <width>3</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>3</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="line1">
-         <property name="minimumSize">
-          <size>
-           <width>3</width>
-           <height>0</height>
-          </size>
-         </property>
-         <property name="maximumSize">
-          <size>
-           <width>3</width>
-           <height>30</height>
-          </size>
-         </property>
-         <property name="text">
-          <string/>
-         </property>
-        </widget>
-       </item>
-      </layout>
+       <property name="maximumSize">
+        <size>
+         <width>3</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="line4">
+       <property name="geometry">
+        <rect>
+         <x>15</x>
+         <y>0</y>
+         <width>3</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>3</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>3</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QLabel" name="line1">
+       <property name="geometry">
+        <rect>
+         <x>21</x>
+         <y>0</y>
+         <width>3</width>
+         <height>25</height>
+        </rect>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>3</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>3</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </widget>
      <widget class="QLabel" name="text">
       <property name="geometry">
        <rect>
         <x>50</x>
-        <y>0</y>
+        <y>8</y>
         <width>90</width>
         <height>35</height>
        </rect>
@@ -187,7 +191,7 @@
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>0</y>
+        <y>8</y>
         <width>30</width>
         <height>30</height>
        </rect>
