--- a/learn_14/Qt/MyMusic/mainwindow.ui
+++ b/learn_14/Qt/MyMusic/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1563</width>
-    <height>902</height>
+    <height>1028</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -398,7 +398,7 @@ QPushButton:hover
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>200</height>
+              <height>190</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -422,6 +422,12 @@ QPushButton:hover
              </property>
              <item>
               <widget class="QLabel" name="onlineMusicLabel">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>35</height>
+                </size>
+               </property>
                <property name="text">
                 <string>在线音乐</string>
                </property>
@@ -456,7 +462,7 @@ QPushButton:hover
             <property name="minimumSize">
              <size>
               <width>0</width>
-              <height>200</height>
+              <height>190</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -480,6 +486,12 @@ QPushButton:hover
              </property>
              <item>
               <widget class="QLabel" name="MyMusicLabel">
+               <property name="minimumSize">
+                <size>
+                 <width>0</width>
+                 <height>35</height>
+                </size>
+               </property>
                <property name="text">
                 <string>我的音乐</string>
                </property>
@@ -574,22 +586,22 @@ QPushButton:hover
                  </property>
                  <layout class="QVBoxLayout" name="verticalLayout_9">
                   <item>
-                   <widget class="QLabel" name="label">
+                   <widget class="QLabel" name="recommendLabel">
                     <property name="minimumSize">
                      <size>
-                      <width>50</width>
+                      <width>0</width>
                       <height>50</height>
                      </size>
                     </property>
                     <property name="maximumSize">
                      <size>
-                      <width>100</width>
-                      <height>50</height>
+                      <width>1000000</width>
+                      <height>60</height>
                      </size>
                     </property>
                     <property name="font">
                      <font>
-                      <pointsize>20</pointsize>
+                      <pointsize>28</pointsize>
                      </font>
                     </property>
                     <property name="text">
@@ -598,7 +610,7 @@ QPushButton:hover
                    </widget>
                   </item>
                   <item>
-                   <widget class="QLabel" name="label_2">
+                   <widget class="QLabel" name="todayMusicLabel">
                     <property name="minimumSize">
                      <size>
                       <width>150</width>
@@ -608,12 +620,12 @@ QPushButton:hover
                     <property name="maximumSize">
                      <size>
                       <width>16777215</width>
-                      <height>30</height>
+                      <height>35</height>
                      </size>
                     </property>
                     <property name="font">
                      <font>
-                      <pointsize>12</pointsize>
+                      <pointsize>18</pointsize>
                      </font>
                     </property>
                     <property name="text">
@@ -622,7 +634,10 @@ QPushButton:hover
                    </widget>
                   </item>
                   <item>
-                   <widget class="QLabel" name="label_3">
+                   <widget class="MusicListBox" name="recommendBox" native="true"/>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="MusicSupplyLabel">
                     <property name="minimumSize">
                      <size>
                       <width>0</width>
@@ -632,18 +647,21 @@ QPushButton:hover
                     <property name="maximumSize">
                      <size>
                       <width>16777215</width>
-                      <height>30</height>
+                      <height>35</height>
                      </size>
                     </property>
                     <property name="font">
                      <font>
-                      <pointsize>12</pointsize>
+                      <pointsize>18</pointsize>
                      </font>
                     </property>
                     <property name="text">
-                     <string>还想看看别的么</string>
+                     <string>你的音乐补给站</string>
                     </property>
                    </widget>
+                  </item>
+                  <item>
+                   <widget class="MusicListBox" name="otherBox" native="true"/>
                   </item>
                  </layout>
                 </widget>
@@ -1014,7 +1032,13 @@ QPushButton:hover
   <customwidget>
    <class>BtForm</class>
    <extends>QWidget</extends>
-   <header location="global">btform.h</header>
+   <header>btform.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MusicListBox</class>
+   <extends>QWidget</extends>
+   <header>musiclistbox.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
