--- a/learn_14/Qt/MyMusic/musicbox.ui
+++ b/learn_14/Qt/MyMusic/musicbox.ui
@@ -31,30 +31,17 @@
    <widget class="QLabel" name="cover">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>150</width>
-      <height>150</height>
+      <x>10</x>
+      <y>10</y>
+      <width>130</width>
+      <height>130</height>
      </rect>
     </property>
     <property name="cursor">
      <cursorShape>PointingHandCursor</cursorShape>
     </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="button">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>112</width>
-      <height>34</height>
-     </rect>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
+    <property name="styleSheet">
+     <string notr="true">background-color:rgb(151, 247, 255);</string>
     </property>
     <property name="text">
      <string/>
