--- a/learn_14/Qt/MyMusic/musicboxlist.ui
+++ b/learn_14/Qt/MyMusic/musicboxlist.ui
@@ -7,13 +7,13 @@
     <x>0</x>
     <y>0</y>
     <width>690</width>
-    <height>440</height>
+    <height>500</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>420</height>
+    <height>500</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -130,11 +130,23 @@ QPushButton:hover
       </property>
       <item>
        <widget class="QWidget" name="upList" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>250</height>
+         </size>
+        </property>
         <layout class="QHBoxLayout" name="horizontalLayout_4"/>
        </widget>
       </item>
       <item>
        <widget class="QWidget" name="downList" native="true">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>250</height>
+         </size>
+        </property>
         <layout class="QHBoxLayout" name="horizontalLayout_3"/>
        </widget>
       </item>
