--- a/learn_14/Qt/MyMusic/musicboxlist.ui
+++ b/learn_14/Qt/MyMusic/musicboxlist.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>MusicBoxList</class>
  <widget class="QWidget" name="MusicBoxList">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -10,10 +13,16 @@
     <height>500</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="minimumSize">
    <size>
     <width>0</width>
-    <height>500</height>
+    <height>0</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -112,6 +121,12 @@ QPushButton:hover
    </item>
    <item>
     <widget class="QWidget" name="musicList" native="true">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <property name="spacing">
        <number>0</number>
@@ -152,13 +167,6 @@ QPushButton:hover
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item>
-          <layout class="QHBoxLayout" name="upListHLayout">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-          </layout>
-         </item>
         </layout>
        </widget>
       </item>
@@ -186,13 +194,6 @@ QPushButton:hover
          <property name="bottomMargin">
           <number>0</number>
          </property>
-         <item>
-          <layout class="QHBoxLayout" name="downListHLayout">
-           <property name="spacing">
-            <number>0</number>
-           </property>
-          </layout>
-         </item>
         </layout>
        </widget>
       </item>
