--- a/learn_14/Qt/MyMusic/mainwindow.ui
+++ b/learn_14/Qt/MyMusic/mainwindow.ui
@@ -163,6 +163,21 @@ QPushButton:hover
 }</string>
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_4">
+             <property name="spacing">
+              <number>0</number>
+             </property>
+             <property name="leftMargin">
+              <number>0</number>
+             </property>
+             <property name="topMargin">
+              <number>0</number>
+             </property>
+             <property name="rightMargin">
+              <number>0</number>
+             </property>
+             <property name="bottomMargin">
+              <number>0</number>
+             </property>
              <item>
               <widget class="QWidget" name="searchBox" native="true">
                <property name="minimumSize">
@@ -647,7 +662,7 @@ QPushButton:hover
                     <property name="maximumSize">
                      <size>
                       <width>16777215</width>
-                      <height>40</height>
+                      <height>50</height>
                      </size>
                     </property>
                     <property name="font">
@@ -669,10 +684,210 @@ QPushButton:hover
               </item>
              </layout>
             </widget>
-            <widget class="QWidget" name="radioPage"/>
-            <widget class="QWidget" name="explorePage"/>
-            <widget class="QWidget" name="myLovePage"/>
-            <widget class="QWidget" name="locolPage"/>
+            <widget class="QWidget" name="radioPage">
+             <layout class="QVBoxLayout" name="verticalLayout_11">
+              <item>
+               <widget class="QScrollArea" name="scrollArea_2">
+                <property name="widgetResizable">
+                 <bool>true</bool>
+                </property>
+                <widget class="QWidget" name="scrollAreaWidgetContents_2">
+                 <property name="geometry">
+                  <rect>
+                   <x>0</x>
+                   <y>0</y>
+                   <width>1343</width>
+                   <height>818</height>
+                  </rect>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_14">
+                  <item>
+                   <widget class="QLabel" name="radioLabel_1">
+                    <property name="minimumSize">
+                     <size>
+                      <width>0</width>
+                      <height>50</height>
+                     </size>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>1000000</width>
+                      <height>60</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>28</pointsize>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>电台</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="radioLabel_2">
+                    <property name="minimumSize">
+                     <size>
+                      <width>150</width>
+                      <height>30</height>
+                     </size>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>16777215</width>
+                      <height>50</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>18</pointsize>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>想听点什么呢</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="MusicBoxList" name="radioBox_1" native="true"/>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="radioLabel_3">
+                    <property name="minimumSize">
+                     <size>
+                      <width>0</width>
+                      <height>30</height>
+                     </size>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>16777215</width>
+                      <height>50</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>18</pointsize>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>电波对接中q(≧▽≦q)</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="MusicBoxList" name="radioBox_2" native="true"/>
+                  </item>
+                 </layout>
+                </widget>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+            <widget class="QWidget" name="explorePage">
+             <layout class="QVBoxLayout" name="verticalLayout_12">
+              <item>
+               <widget class="QScrollArea" name="scrollArea_3">
+                <property name="widgetResizable">
+                 <bool>true</bool>
+                </property>
+                <widget class="QWidget" name="scrollAreaWidgetContents_3">
+                 <property name="geometry">
+                  <rect>
+                   <x>0</x>
+                   <y>0</y>
+                   <width>1343</width>
+                   <height>818</height>
+                  </rect>
+                 </property>
+                 <layout class="QVBoxLayout" name="verticalLayout_13">
+                  <item>
+                   <widget class="QLabel" name="exploreLabel_1">
+                    <property name="minimumSize">
+                     <size>
+                      <width>0</width>
+                      <height>50</height>
+                     </size>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>1000000</width>
+                      <height>60</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>28</pointsize>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>探索</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="exploreLabel_2">
+                    <property name="minimumSize">
+                     <size>
+                      <width>150</width>
+                      <height>30</height>
+                     </size>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>16777215</width>
+                      <height>50</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>18</pointsize>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>一段未发现的旋律</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="MusicBoxList" name="exploreBox_1" native="true"/>
+                  </item>
+                  <item>
+                   <widget class="QLabel" name="exploreLabel_3">
+                    <property name="minimumSize">
+                     <size>
+                      <width>0</width>
+                      <height>30</height>
+                     </size>
+                    </property>
+                    <property name="maximumSize">
+                     <size>
+                      <width>16777215</width>
+                      <height>50</height>
+                     </size>
+                    </property>
+                    <property name="font">
+                     <font>
+                      <pointsize>18</pointsize>
+                     </font>
+                    </property>
+                    <property name="text">
+                     <string>几缕散落的歌声</string>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="MusicBoxList" name="exploreBox_2" native="true"/>
+                  </item>
+                 </layout>
+                </widget>
+               </widget>
+              </item>
+             </layout>
+            </widget>
+            <widget class="MusicListPage" name="myLovePage"/>
+            <widget class="MusicListPage" name="locolPage"/>
             <widget class="QWidget" name="recentPage"/>
            </widget>
           </item>
@@ -1039,6 +1254,12 @@ QPushButton:hover
    <class>MusicBoxList</class>
    <extends>QWidget</extends>
    <header>musicboxlist.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>MusicListPage</class>
+   <extends>QWidget</extends>
+   <header>musiclistpage.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
