--- a/learn_14/Qt/MyMusic/musiclistpage.ui
+++ b/learn_14/Qt/MyMusic/musiclistpage.ui
@@ -81,6 +81,9 @@
         <height>120</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">background-color:rgb(170, 255, 127);</string>
+      </property>
       <property name="text">
        <string/>
       </property>
